--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LocationTracking</string>
+    <string name="no_address_found">No address found!</string>
+    <string name="invalid_lat_long_used">Invalid coordinates</string>
 </resources>
